fix: align and links in header

--- a/online-zoo/pages/landing/landing-style.css
+++ b/online-zoo/pages/landing/landing-style.css
@@ -49,7 +49,9 @@ li {
 /* Header */
 .header {
   padding-top: 12px;
+  padding-bottom: 12px;
   display: flex;
+  align-items: center;
 }
 
 .header__logo {
